--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
             <a-entity
             position="0 0 0"
             rotation="0 0 0"
-            scale="2 2 2"
+            scale="20 20 20"
             gltf-model="https://raw.githubusercontent.com/FilipeTorre/PePeao/main/PePeao.gltf"
-            animation__PartOne="property: rotation; from: 0 0 0; to: 0 0 360; loop: true; dur: 5000; easing: easeInOutQuad"
+            animation__PartOne="property: rotation; from: 0 0 0; to: 0 360 0; loop: true; dur: 30000; easing: linear"
             ></a-entity>
 
         </a-marker>
